--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11373,6 +11373,11 @@ body {
 .products-index-page .products-list .product-item .product-content .bottom > div:first-child {
   border-right: 1px solid #eee;
 }
+.products-index-page .search-form {
+  padding: 0 5px 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
 
 .footer {
   position: absolute;
