--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,7 +37,7 @@ body {
   margin-bottom: 60px;
 }
 
-.products-index-page {
+.products-index-page, .products-favorites-page {
   .pagination {
     margin-right: 5px;
   }
