--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19418,6 +19418,10 @@ body {
   width: 150px;
   padding-right: 20px;
 }
+.orders-show-page .payment-buttons {
+  margin-top: 10px;
+  padding-right: 10px;
+}
 
 .footer {
   position: absolute;
